<resources>
    <string name="app_name">ChatConversa</string>
    <string name="username">Username</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="chatconversa">ChatConversa</string>
    <string name="registrar">Registrar</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="run">RUN</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="token_de_empresa">Token de empresa</string>
    <string name="sesion_iniciada">sesion iniciada</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="mensaje">¿Está seguro que desea cerrar sesión?</string>
    <string name="confirmar">Confirmar</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Foto de perfil</string>
    <string name="menu_slideshow">Creador</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Map</string>
</resources>
