<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.jcortiz.chatconversa.Activities.ui.inicio.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.jcortiz.chatconversa.Activities.ui.inicio.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_inicio" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_tomar_foto"
        android:name="com.jcortiz.chatconversa.Activities.ui.tomarFoto.TomarFotoFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_tomar_foto" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jcortiz.chatconversa.Activities.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>